add to the main

--- a/label_errors/solutions/Solution - Label Errors.ipynb
+++ b/label_errors/solutions/Solution - Label Errors.ipynb
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install xgboost scikit-learn pandas cleanlab"
+    "# !pip install xgboost scikit-learn pandas cleanlab"
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -171,7 +171,7 @@
        "4                  C  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "4  68827d      91      98      75     3             2                   2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -391,12 +391,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pred_probs should be a Nx5 matrix of out-of-sample predicted probabilities, with N = len(data)\n",
     "pred_probs = cross_val_predict(model, train_data, train_labels, method='predict_proba', cv=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(705, 5)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_probs.shape"
    ]
   },
   {
@@ -421,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,12 +465,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# should be a numpy array of length 5\n",
     "thresholds = compute_class_thresholds(pred_probs, train_labels.to_numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.70661992, 0.63892676, 0.63531261, 0.45481033, 0.44689162])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thresholds"
    ]
   },
   {
@@ -466,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,11 +532,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "C = compute_confident_joint(pred_probs, train_labels.to_numpy(), thresholds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[116,   3,  12,   5,  14],\n",
+       "       [  7, 109,   3,  24,   7],\n",
+       "       [  0,   3,  77,   6,   8],\n",
+       "       [  2,  25,   5,  55,   4],\n",
+       "       [ 16,  14,  12,   7,  51]])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C.trace() == 116 + 109 + 77 + 55 + 51"
    ]
   },
   {
@@ -510,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -703,7 +787,7 @@
        "206            D                  D  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -766,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -831,18 +915,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cleanlab\n",
     "\n",
-    "cl_issue_idx = cleanlab.filter.find_label_issues(labels, pred_probs, return_indices_ranked_by='self_confidence')"
+    "cl_issue_idx = cleanlab.filter.find_label_issues(train_labels, pred_probs, return_indices_ranked_by='self_confidence')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -877,76 +961,76 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>637</th>\n",
-       "      <td>77c9c5</td>\n",
+       "      <th>541</th>\n",
+       "      <td>338cae</td>\n",
        "      <td>0</td>\n",
-       "      <td>79</td>\n",
-       "      <td>65</td>\n",
+       "      <td>89</td>\n",
+       "      <td>90</td>\n",
        "      <td>cheated on exam, gets 0pts</td>\n",
-       "      <td>F</td>\n",
+       "      <td>D</td>\n",
        "      <td>A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>264</th>\n",
-       "      <td>dacfb9</td>\n",
-       "      <td>80</td>\n",
-       "      <td>60</td>\n",
-       "      <td>80</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>C</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>378</th>\n",
-       "      <td>e2614a</td>\n",
+       "      <th>409</th>\n",
+       "      <td>7cb11e</td>\n",
+       "      <td>78</td>\n",
+       "      <td>57</td>\n",
        "      <td>85</td>\n",
-       "      <td>62</td>\n",
-       "      <td>75</td>\n",
        "      <td>NaN</td>\n",
        "      <td>C</td>\n",
-       "      <td>F</td>\n",
+       "      <td>A</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>689</th>\n",
-       "      <td>b0306d</td>\n",
-       "      <td>77</td>\n",
-       "      <td>51</td>\n",
+       "      <th>196</th>\n",
+       "      <td>d77a5c</td>\n",
+       "      <td>89</td>\n",
        "      <td>70</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>D</td>\n",
-       "      <td>B</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>318</th>\n",
-       "      <td>347d55</td>\n",
-       "      <td>98</td>\n",
-       "      <td>51</td>\n",
        "      <td>74</td>\n",
        "      <td>NaN</td>\n",
        "      <td>C</td>\n",
-       "      <td>F</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>4065e7</td>\n",
+       "      <td>96</td>\n",
+       "      <td>75</td>\n",
+       "      <td>92</td>\n",
+       "      <td>great final presentation +10</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>206</th>\n",
+       "      <td>85b1fe</td>\n",
+       "      <td>72</td>\n",
+       "      <td>78</td>\n",
+       "      <td>69</td>\n",
+       "      <td>missed homework frequently -10</td>\n",
+       "      <td>D</td>\n",
+       "      <td>D</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    stud_ID  exam_1  exam_2  exam_3                       notes letter_grade  \\\n",
-       "637  77c9c5       0      79      65  cheated on exam, gets 0pts            F   \n",
-       "264  dacfb9      80      60      80                         NaN            C   \n",
-       "378  e2614a      85      62      75                         NaN            C   \n",
-       "689  b0306d      77      51      70                         NaN            D   \n",
-       "318  347d55      98      51      74                         NaN            C   \n",
+       "    stud_ID  exam_1  exam_2  exam_3                           notes  \\\n",
+       "541  338cae       0      89      90      cheated on exam, gets 0pts   \n",
+       "409  7cb11e      78      57      85                             NaN   \n",
+       "196  d77a5c      89      70      74                             NaN   \n",
+       "215  4065e7      96      75      92    great final presentation +10   \n",
+       "206  85b1fe      72      78      69  missed homework frequently -10   \n",
        "\n",
-       "    noisy_letter_grade  \n",
-       "637                  A  \n",
-       "264                  F  \n",
-       "378                  F  \n",
-       "689                  B  \n",
-       "318                  F  "
+       "    letter_grade noisy_letter_grade  \n",
+       "541            D                  A  \n",
+       "409            C                  A  \n",
+       "196            C                  C  \n",
+       "215            A                  A  \n",
+       "206            D                  D  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -982,7 +1066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
