--- a/data_centric_model_centric/Lab - Data-Centric AI vs Model-Centric AI.ipynb
+++ b/data_centric_model_centric/Lab - Data-Centric AI vs Model-Centric AI.ipynb
@@ -34,12 +34,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a3e0ee93",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (1.1.0)\n",
+      "Requirement already satisfied: pandas in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (1.5.0)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from scikit-learn) (1.23.0)\n",
+      "Requirement already satisfied: scipy>=1.3.2 in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from scikit-learn) (1.9.1)\n",
+      "Requirement already satisfied: joblib>=1.0.0 in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from scikit-learn) (1.2.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from scikit-learn) (3.1.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from pandas) (2022.4)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install scikit-learn pandas"
    ]
@@ -56,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7405df2c",
    "metadata": {},
    "outputs": [],
@@ -66,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5a633542",
    "metadata": {},
    "outputs": [
@@ -97,29 +116,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>405</th>\n",
-       "      <td>My husband is really enjoying his subscription...</td>\n",
-       "      <td>good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>281</th>\n",
-       "      <td>my favorite magazine for a really great price</td>\n",
-       "      <td>good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>391</th>\n",
-       "      <td>We love this magazine.\\nGreat choice.\\nMore fo...</td>\n",
-       "      <td>good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>527</th>\n",
-       "      <td>far too many adds  not enought info</td>\n",
+       "      <th>773</th>\n",
+       "      <td>Totally liberal and one-sided. I can't stand h...</td>\n",
        "      <td>bad</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>821</th>\n",
-       "      <td>It you live in Canada be warned,magazine is al...</td>\n",
+       "      <th>955</th>\n",
+       "      <td>I Have not had the opportunity to read Wired. ...</td>\n",
        "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>809</th>\n",
+       "      <td>I have ordered this magazine for more than 7 w...</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>489</th>\n",
+       "      <td>I am very happy with my purchase! I received a...</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>Bought the magazine for my brother in Cincinna...</td>\n",
+       "      <td>good</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -127,14 +146,14 @@
       ],
       "text/plain": [
        "                                                review label\n",
-       "405  My husband is really enjoying his subscription...  good\n",
-       "281      my favorite magazine for a really great price  good\n",
-       "391  We love this magazine.\\nGreat choice.\\nMore fo...  good\n",
-       "527                far too many adds  not enought info   bad\n",
-       "821  It you live in Canada be warned,magazine is al...   bad"
+       "773  Totally liberal and one-sided. I can't stand h...   bad\n",
+       "955  I Have not had the opportunity to read Wired. ...   bad\n",
+       "809  I have ordered this magazine for more than 7 w...   bad\n",
+       "489  I am very happy with my purchase! I received a...  good\n",
+       "151  Bought the magazine for my brother in Cincinna...  good"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,6 +163,124 @@
     "test = pd.read_csv('reviews_test.csv')\n",
     "\n",
     "test.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "14a43821",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Based on all the negative comments about Taste...</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>I still have not received this.  Obviously I c...</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>&lt;/tr&gt;The magazine is not worth the cost of sub...</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>This magazine is basically ads. Kindve worthle...</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The only thing I've recieved, so far, is the b...</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6661</th>\n",
+       "      <td>Wouldn't open on my tablet - can't say much mo...</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6662</th>\n",
+       "      <td>I ordered this item in July, it is not Decembe...</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6663</th>\n",
+       "      <td>&lt;/li&gt;My favorite magazine ever!</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6664</th>\n",
+       "      <td>I love this magazine and I am very excited to ...</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6665</th>\n",
+       "      <td>Great magazine. Good reading and awesome reviews.</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6666 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 review label\n",
+       "0     Based on all the negative comments about Taste...  good\n",
+       "1     I still have not received this.  Obviously I c...   bad\n",
+       "2     </tr>The magazine is not worth the cost of sub...  good\n",
+       "3     This magazine is basically ads. Kindve worthle...   bad\n",
+       "4     The only thing I've recieved, so far, is the b...   bad\n",
+       "...                                                 ...   ...\n",
+       "6661  Wouldn't open on my tablet - can't say much mo...   bad\n",
+       "6662  I ordered this item in July, it is not Decembe...   bad\n",
+       "6663                    </li>My favorite magazine ever!   bad\n",
+       "6664  I love this magazine and I am very excited to ...  good\n",
+       "6665  Great magazine. Good reading and awesome reviews.  good\n",
+       "\n",
+       "[6666 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train"
    ]
   },
   {
@@ -158,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "26e13e03",
    "metadata": {},
    "outputs": [],
@@ -171,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "afcb7dbd",
    "metadata": {},
    "outputs": [],
@@ -185,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "14a09cc6",
    "metadata": {},
    "outputs": [],
@@ -203,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2850df30",
    "metadata": {},
    "outputs": [],
@@ -213,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "60677a08",
    "metadata": {},
    "outputs": [],
@@ -226,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f77729fb",
    "metadata": {},
    "outputs": [
@@ -234,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 76.5%\n"
+      "Accuracy: 76.0%\n"
      ]
     }
    ],
@@ -272,13 +409,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3ca681e6",
+   "execution_count": 12,
+   "id": "bf2ae7dd",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3ca681e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 85.4%\n"
+     ]
+    }
+   ],
+   "source": [
     "# YOUR CODE HERE\n",
     "\n",
+    "\n",
+    "rf_clf = Pipeline([\n",
+    "    ('vect', CountVectorizer()),\n",
+    "    ('tfidf', TfidfTransformer()),\n",
+    "    ('clf', RandomForestClassifier()),\n",
+    "    \n",
+    "])\n",
+    "\n",
+    "_ = rf_clf.fit(train['review'], train['label'])\n",
+    "\n",
+    "evaluate(rf_clf)\n",
     "# evaluate your model and see if it does better\n",
     "# than the ones we provided"
    ]
@@ -295,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "ab34483c",
    "metadata": {},
    "outputs": [
@@ -363,7 +529,7 @@
        "4  The only thing I've recieved, so far, is the b...   bad"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "6ebf3a84",
    "metadata": {},
    "outputs": [
@@ -418,12 +584,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "82e43ff7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'review': {1: \"I still have not received this.  Obviously I can't review something I haven't seen.  Where is my order???????\", 2: '</tr>The magazine is not worth the cost of subscription.</tr>', 3: 'This magazine is basically ads. Kindve worthless to me really.', 4: \"The only thing I've recieved, so far, is the bill.\\nI know this is [ or was when I last subscribed ] a ten month magazine - but so far not even the usual promotional papers.......\"}, 'label': {1: 'bad', 2: 'good', 3: 'bad', 4: 'bad'}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "print(train.iloc[1:5].to_dict())"
    ]
   },
   {
@@ -450,13 +626,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5990cdcb",
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_bad_data(review: str) -> bool:\n",
     "    # YOUR CODE HERE\n",
+    "    if \"<\" in review:\n",
+    "        return True \n",
     "    return False"
    ]
   },
@@ -470,12 +648,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e9c7671e",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_clean = train[~train['review'].map(is_bad_data)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a57d1d70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>I still have not received this.  Obviously I c...</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>This magazine is basically ads. Kindve worthle...</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The only thing I've recieved, so far, is the b...</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>This is one magazine I really love. It has pri...</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Did not. Open.</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6660</th>\n",
+       "      <td>Really enjoy te information in this magazine</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6661</th>\n",
+       "      <td>Wouldn't open on my tablet - can't say much mo...</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6662</th>\n",
+       "      <td>I ordered this item in July, it is not Decembe...</td>\n",
+       "      <td>bad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6664</th>\n",
+       "      <td>I love this magazine and I am very excited to ...</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6665</th>\n",
+       "      <td>Great magazine. Good reading and awesome reviews.</td>\n",
+       "      <td>good</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3998 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 review label\n",
+       "1     I still have not received this.  Obviously I c...   bad\n",
+       "3     This magazine is basically ads. Kindve worthle...   bad\n",
+       "4     The only thing I've recieved, so far, is the b...   bad\n",
+       "6     This is one magazine I really love. It has pri...  good\n",
+       "7                                        Did not. Open.   bad\n",
+       "...                                                 ...   ...\n",
+       "6660       Really enjoy te information in this magazine  good\n",
+       "6661  Wouldn't open on my tablet - can't say much mo...   bad\n",
+       "6662  I ordered this item in July, it is not Decembe...   bad\n",
+       "6664  I love this magazine and I am very excited to ...  good\n",
+       "6665  Great magazine. Good reading and awesome reviews.  good\n",
+       "\n",
+       "[3998 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_clean"
    ]
   },
   {
@@ -488,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "0e83abad",
    "metadata": {},
    "outputs": [],
@@ -498,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e5e3c7d7",
    "metadata": {},
    "outputs": [],
@@ -508,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "6f72b0db",
    "metadata": {},
    "outputs": [],
@@ -526,13 +822,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "80b78100",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 97.0%\n"
+     ]
+    }
+   ],
    "source": [
     "evaluate(sgd_clf_clean)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcf7acbc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -551,7 +863,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
