--- a/data_centric_model_centric/solutions/Solution - Data-Centric AI vs Model-Centric AI.ipynb
+++ b/data_centric_model_centric/solutions/Solution - Data-Centric AI vs Model-Centric AI.ipynb
@@ -34,30 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dc409d8a",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scikit-learn in /Users/anish/Documents/Anish/src/cleanlab/env/lib/python3.9/site-packages (1.1.1)\n",
-      "Requirement already satisfied: pandas in /Users/anish/Documents/Anish/src/cleanlab/env/lib/python3.9/site-packages (1.5.1)\n",
-      "Requirement already satisfied: joblib>=1.0.0 in /Users/anish/Documents/Anish/src/cleanlab/env/lib/python3.9/site-packages (from scikit-learn) (1.1.0)\n",
-      "Requirement already satisfied: scipy>=1.3.2 in /Users/anish/Documents/Anish/src/cleanlab/env/lib/python3.9/site-packages (from scikit-learn) (1.8.0)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in /Users/anish/Documents/Anish/src/cleanlab/env/lib/python3.9/site-packages (from scikit-learn) (1.22.3)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/anish/Documents/Anish/src/cleanlab/env/lib/python3.9/site-packages (from scikit-learn) (3.1.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/anish/Documents/Anish/src/cleanlab/env/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/anish/Documents/Anish/src/cleanlab/env/lib/python3.9/site-packages (from pandas) (2022.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/anish/Documents/Anish/src/cleanlab/env/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
-      "\u001b[33mWARNING: You are using pip version 21.3.1; however, version 22.3.1 is available.\n",
-      "You should consider upgrading via the '/Users/anish/Documents/Anish/src/cleanlab/env/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install scikit-learn pandas"
    ]
@@ -74,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1a80e7c1",
    "metadata": {},
    "outputs": [],
@@ -84,79 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "324d7fa6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>review</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>856</th>\n",
-       "      <td>Cheap paer</td>\n",
-       "      <td>bad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>672</th>\n",
-       "      <td>The font was too small I Found it hard to read...</td>\n",
-       "      <td>bad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>330</th>\n",
-       "      <td>My favorite restroom fodder. Love taking a tri...</td>\n",
-       "      <td>good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>902</th>\n",
-       "      <td>Signed up for a low rate but the autorenew cam...</td>\n",
-       "      <td>bad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>887</th>\n",
-       "      <td>Why pay for a book of ads? There was like 4 st...</td>\n",
-       "      <td>bad</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                review label\n",
-       "856                                         Cheap paer   bad\n",
-       "672  The font was too small I Found it hard to read...   bad\n",
-       "330  My favorite restroom fodder. Love taking a tri...  good\n",
-       "902  Signed up for a low rate but the autorenew cam...   bad\n",
-       "887  Why pay for a book of ads? There was like 4 st...   bad"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train = pd.read_csv('../reviews_train.csv')\n",
     "test = pd.read_csv('../reviews_test.csv')\n",
@@ -176,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d11d2ac8",
    "metadata": {},
    "outputs": [],
@@ -189,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5a475cae",
    "metadata": {},
    "outputs": [],
@@ -203,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "02aedbe9",
    "metadata": {},
    "outputs": [],
@@ -221,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "fae63666",
    "metadata": {},
    "outputs": [],
@@ -231,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "ae004e4f",
    "metadata": {},
    "outputs": [],
@@ -244,18 +157,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9fcfdb2a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 76.4%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluate(sgd_clf)"
    ]
@@ -290,18 +195,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "39c66b3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 85.3%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Naive Bayes model:\n",
     "\n",
@@ -330,79 +227,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8b1490bf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>review</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Based on all the negative comments about Taste...</td>\n",
-       "      <td>good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>I still have not received this.  Obviously I c...</td>\n",
-       "      <td>bad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>&lt;/tr&gt;The magazine is not worth the cost of sub...</td>\n",
-       "      <td>good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>This magazine is basically ads. Kindve worthle...</td>\n",
-       "      <td>bad</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>The only thing I've recieved, so far, is the b...</td>\n",
-       "      <td>bad</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              review label\n",
-       "0  Based on all the negative comments about Taste...  good\n",
-       "1  I still have not received this.  Obviously I c...   bad\n",
-       "2  </tr>The magazine is not worth the cost of sub...  good\n",
-       "3  This magazine is basically ads. Kindve worthle...   bad\n",
-       "4  The only thing I've recieved, so far, is the b...   bad"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train.head()"
    ]
@@ -417,18 +245,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "248ed78a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'review': \"Based on all the negative comments about Taste of Home, I will not subscribeto the magazine. In the past it was a great read.\\nSorry it, too, has gone the 'way of the wind'.<br>o-p28pass4 </br>\", 'label': 'good'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(train.iloc[0].to_dict())"
    ]
@@ -453,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ab98952d",
    "metadata": {},
    "outputs": [],
@@ -485,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "6479f77d",
    "metadata": {},
    "outputs": [],
@@ -507,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a01e897a",
    "metadata": {},
    "outputs": [],
@@ -525,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "4cb996d2",
    "metadata": {},
    "outputs": [],
@@ -535,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "7b9ba60e",
    "metadata": {},
    "outputs": [],
@@ -545,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "a5435e9c",
    "metadata": {},
    "outputs": [],
@@ -563,18 +383,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "048434f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 96.9%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "evaluate(sgd_clf_clean)"
    ]
@@ -633,7 +445,7 @@
    "outputs": [],
    "source": [
     "label_map = {\"bad\": 0, \"good\": 1}\n",
-    "dataset_train = Dataset.from_dict({\"label\": train[\"label\"].map(label_map), \"text\": train[\"review\"].values})\n",
+    "dataset_train = Dataset.from_dict({\"label\": train_clean[\"label\"].map(label_map), \"text\": train_clean[\"review\"].values})\n",
     "dataset_test = Dataset.from_dict({\"label\": test[\"label\"].map(label_map), \"text\": test[\"review\"].values})"
    ]
   },
@@ -655,7 +467,7 @@
     "model_name = \"distilbert-base-uncased\"  # which pretrained neural network weights to load for fine-tuning on our data\n",
     "# other options you could try: \"bert-base-uncased\", \"bert-base-cased\", \"google/electra-small-discriminator\"\n",
     "\n",
-    "max_training_steps = 10  # how many iterations our network will be trained for\n",
+    "max_training_steps = 50  # how many iterations our network will be trained for\n",
     "# Here set to a tiny value to ensure quick runtimes, set to higher values if you have a GPU to run this code on.\n",
     "\n",
     "model_folder = \"test_trainer\"  # file where model will be saved after training"
@@ -726,6 +538,14 @@
     "pred_classes = np.argmax(pred_probs, axis=1)\n",
     "print(f\"Error rate of predictions: {np.mean(pred_classes != test_tokenized_dataset['label'])}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b4a931d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -744,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
