--- a/label_errors/Lab - Label Errors.ipynb
+++ b/label_errors/Lab - Label Errors.ipynb
@@ -34,9 +34,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: xgboost in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (1.6.2)\n",
+      "Requirement already satisfied: scikit-learn in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (1.1.0)\n",
+      "Requirement already satisfied: pandas in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (1.5.0)\n",
+      "Collecting cleanlab\n",
+      "  Downloading cleanlab-2.6.0-py3-none-any.whl.metadata (23 kB)\n",
+      "Requirement already satisfied: numpy in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from xgboost) (1.23.0)\n",
+      "Requirement already satisfied: scipy in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from xgboost) (1.9.1)\n",
+      "Requirement already satisfied: joblib>=1.0.0 in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from scikit-learn) (1.2.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from scikit-learn) (3.1.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from pandas) (2022.4)\n",
+      "Requirement already satisfied: tqdm>=4.53.0 in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from cleanlab) (4.64.1)\n",
+      "Collecting termcolor>=2.4.0 (from cleanlab)\n",
+      "  Downloading termcolor-2.4.0-py3-none-any.whl.metadata (6.1 kB)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/diwu/opt/miniconda3/envs/torch/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Downloading cleanlab-2.6.0-py3-none-any.whl (325 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m325.3/325.3 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading termcolor-2.4.0-py3-none-any.whl (7.7 kB)\n",
+      "Installing collected packages: termcolor, cleanlab\n",
+      "Successfully installed cleanlab-2.6.0 termcolor-2.4.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install xgboost scikit-learn pandas cleanlab"
    ]
@@ -69,7 +99,113 @@
     "id": "nQVmMBQOS43j",
     "outputId": "54a45659-ecb6-47fe-acfa-d0424027af47"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stud_ID</th>\n",
+       "      <th>exam_1</th>\n",
+       "      <th>exam_2</th>\n",
+       "      <th>exam_3</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>letter_grade</th>\n",
+       "      <th>noisy_letter_grade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>f48f73</td>\n",
+       "      <td>53</td>\n",
+       "      <td>77</td>\n",
+       "      <td>93</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0bd4e7</td>\n",
+       "      <td>81</td>\n",
+       "      <td>64</td>\n",
+       "      <td>80</td>\n",
+       "      <td>great participation +10</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>e1795d</td>\n",
+       "      <td>74</td>\n",
+       "      <td>88</td>\n",
+       "      <td>97</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B</td>\n",
+       "      <td>B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cb9d7a</td>\n",
+       "      <td>61</td>\n",
+       "      <td>94</td>\n",
+       "      <td>78</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9acca4</td>\n",
+       "      <td>48</td>\n",
+       "      <td>90</td>\n",
+       "      <td>91</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  stud_ID  exam_1  exam_2  exam_3                    notes letter_grade  \\\n",
+       "0  f48f73      53      77      93                      NaN            C   \n",
+       "1  0bd4e7      81      64      80  great participation +10            B   \n",
+       "2  e1795d      74      88      97                      NaN            B   \n",
+       "3  cb9d7a      61      94      78                      NaN            C   \n",
+       "4  9acca4      48      90      91                      NaN            C   \n",
+       "\n",
+       "  noisy_letter_grade  \n",
+       "0                  C  \n",
+       "1                  B  \n",
+       "2                  B  \n",
+       "3                  C  \n",
+       "4                  C  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from xgboost import XGBClassifier\n",
     "from sklearn import preprocessing\n",
@@ -79,15 +215,134 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv(\"../student-grades.csv\")\n",
+    "df = pd.read_csv(\"./student-grades.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(941, 7)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stud_ID</th>\n",
+       "      <th>exam_1</th>\n",
+       "      <th>exam_2</th>\n",
+       "      <th>exam_3</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>letter_grade</th>\n",
+       "      <th>noisy_letter_grade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>37fd76</td>\n",
+       "      <td>99</td>\n",
+       "      <td>59</td>\n",
+       "      <td>70</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>018bff</td>\n",
+       "      <td>94</td>\n",
+       "      <td>41</td>\n",
+       "      <td>91</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b3c9a0</td>\n",
+       "      <td>91</td>\n",
+       "      <td>74</td>\n",
+       "      <td>88</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>076d92</td>\n",
+       "      <td>0</td>\n",
+       "      <td>79</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>68827d</td>\n",
+       "      <td>91</td>\n",
+       "      <td>98</td>\n",
+       "      <td>75</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  stud_ID  exam_1  exam_2  exam_3 notes  letter_grade  noisy_letter_grade\n",
+       "0  37fd76      99      59      70     3             3                   3\n",
+       "1  018bff      94      41      91     2             1                   1\n",
+       "2  b3c9a0      91      74      88     5             1                   1\n",
+       "3  076d92       0      79      65     0             4                   4\n",
+       "4  68827d      91      98      75     3             2                   2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_c = df.copy()\n",
     "# Transform letter grades and notes to categorical numbers.\n",
@@ -154,9 +409,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy with original data: 79.2%\n"
+     ]
+    }
+   ],
    "source": [
     "# Train model on original, possibly noisy data.\n",
     "model.fit(train_data, train_labels)\n",
@@ -178,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
